@@ -212,6 +212,7 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
 renames-uncommon-levels:		unconformable
+symbolic-constant:			unconformable
 constant-78:				ok
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
