@@ -217,6 +217,7 @@ word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
+symbolic-constant:			ok
 constant-78:				ok
 constant-01:				ok
 perform-varying-without-by:		ok
