@@ -211,6 +211,7 @@ word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
 renames-uncommon-levels:		ok
+symbolic-constant:			unconformable
 constant-78:				ok
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
