@@ -217,6 +217,7 @@ word-continuation:			obsolete	# even for literals (as it added concatenation of 
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
+symbolic-constant:			unconformable
 constant-78:				unconformable
 constant-01:				unconformable
 perform-varying-without-by:		unconformable
